--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,5 @@
 </ul>
 
 <router-outlet></router-outlet>
+<app-name-card cardName="Professional Dev" email="prodev@abc.xyz" phone="0123456789"></app-name-card>
+
